# advent

./: .gitignore  Cargo.toml  README.md  check-code.ps1  check-code.sh  pyproject.toml  taskfile.yaml
mixed/algo/: Cargo.toml  pyproject.toml
mixed/algo/python/algo/: __init__.py  _core.pyi
mixed/algo/python/algo/_core/: __init__.pyi  graphs.pyi  matrixes.pyi  positions.pyi
mixed/algo/python/algo/_core/graphs/: __init__.pyi
mixed/algo/python/algo/_core/matrixes/: __init__.pyi
mixed/algo/python/algo/_core/positions/: __init__.pyi
mixed/algo/python/algo/_core/utils/: __init__.pyi
mixed/algo/python/algo/main_mod/: __init__.py  __init__.pyi  graphs.pyi  utils.pyi
mixed/algo/python/algo/main_mod/graphs/: __init__.py
mixed/algo/python/algo/main_mod/matrixes/: __init__.py  __init__.pyi
mixed/algo/python/algo/main_mod/positions/: __init__.py
mixed/algo/python/algo/main_mod/utils/: __init__.py
mixed/algo/src/: lib.rs
mixed/algo/src/algo/: __init__.py  _core.pyi
mixed/algo/src/graphs/: edge.rs  graph.rs
mixed/algo/src/matrixes/: generic_matrix.rs  matrix.rs  mod.rs  static_matrix.rs
mixed/algo/src/positions/: position.rs  vector.rs
mixed/algo/src/utils/: file.rs
python/advent_2024_01/: pyproject.toml
python/advent_2024_01/src/advent_2024_01/: __init__.py  task_01.py  task_02.py  test_task_01.py  test_task_02.py
python/advent_2024_02/: pyproject.toml
python/advent_2024_02/src/advent_2024_02/: __init__.py  task_01.py  task_02.py  test_task_01.py  test_task_02.py
python/advent_2024_03/: pyproject.toml
python/advent_2024_03/src/advent_2024_03/: __init__.py  task_01.py  task_02.py  test_task_01.py  test_task_02.py
python/advent_2025_01/: pyproject.toml
python/advent_2025_01/src/advent_2025_01/: __init__.py  task_01.py  task_02.py  test_task_01.py  test_task_02.py
python/daytest/: pyproject.toml
python/daytest/src/daytest/: __init__.py  main.py
python/test/: pyproject.toml
python/test/src/test/: main.py
