[workspace]
members = ["mixed/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Advent code"
authors = ["Krystian Krakowski <kkrakowski22@gmail.com>"]
readme = "README.md"
rust-version = "1.88"

[workspace.dependencies]
pyo3 = { version = "=0.27.1", features = ["extension-module", "abi3-py312"] }
pyo3-stub-gen = {version ="=0.17.0", features = ["numpy"]}
numpy = "=0.27"
ndarray = "=0.17.1"
