[project]
name = "advent"
version = "0.1.0"
description = "Advent code"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Krystian Krakowski", email = "kkrakowski22@gmail.com"}]
dependencies = [
    "numba==0.62.1",
    "numpy==2.3.5",
    "algo",
]

[dependency-groups]
dev = [
    "mypy==1.18.2",
    "pytest==9.0.1",
    "ruff==0.14.7",
    "pyright==1.1.407",
]

[tool.uv.workspace]
members = ["python/*", "mixed/*"]

[tool.uv.sources]
algo = { workspace = true }

[tool.ruff]
extend-exclude = ["**/*.pyi"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D103",
    "D104",
    "D203",
    "D212",
    "COM812",
    "PLR2004",
    "PYI034",
    "S101",
    "T201",
    "ICN001",
    "PYI029",
    "RUF100"
]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
pythonVersion = "3.12"

[[tool.mypy.overrides]]
module = ["numba.*"]
ignore_missing_imports = true
