[project]
name = "advent"
version = "0.1.0"
description = "Advent code"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Krystian Krakowski", email = "kkrakowski22@gmail.com"}]
dependencies = [
    "numba==0.63.1",
    "numpy==2.3.5",
    "algo",
]

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "pytest==9.0.2",
    "ruff==0.14.14",
    "pyright==1.1.408",
]

[tool.uv.workspace]
members = ["python/*", "mixed/*"]

[tool.uv.sources]
algo = { workspace = true }

[tool.ruff]
extend-exclude = ["**/*.pyi"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D103",
    "D104",
    "D203",
    "D212",
    "COM812",
    "PLR2004",
    "PYI034",
    "S101",
    "T201",
    "ICN001",
    "PYI029",
    "RUF100"
]

[tool.pyright]
typeCheckingMode = "basic"
stubPath = "typings"
reportMissingModuleSource = false
pythonVersion = "3.13"

[[tool.mypy.overrides]]
module = ["numba.*"]
ignore_missing_imports = true
