[project]
name = "advent"
version = "0.1.0"
description = "Advent code"
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "Krystian Krakowski", email = "kkrakowski22@gmail.com"}]
dependencies = [
    "numba==0.65.0",
    "numpy==2.4.4",
    "algo",
]

[dependency-groups]
dev = [
    "mypy==1.20.0",
    "pytest==9.0.3",
    "ruff==0.15.9",
    "pyright==1.1.408",
]

[tool.uv.workspace]
members = ["python/*", "mixed/*"]

[tool.uv.sources]
algo = { workspace = true }

[tool.ruff]
extend-exclude = ["**/*.pyi"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D103",
    "D104",
    "D203",
    "D212",
    "COM812",
    "PLR2004",
    "PYI034",
    "S101",
    "T201",
    "ICN001",
    "PYI029",
    "RUF100"
]

[tool.pyright]
pythonVersion = "3.13"
reportMissingModuleSource = false

[[tool.mypy.overrides]]
module = ["numba.*"]
ignore_missing_imports = true
