[package]
name = "algo"
version.workspace = true
edition.workspace = true

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
# "rlib" is necessary for static linking
crate-type = ["cdylib", "rlib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py312" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.12
pyo3.workspace = true
pyo3-stub-gen.workspace = true
numpy.workspace = true
ndarray.workspace = true

[[bin]]
name = "stub_gen"
doc = false
