[project]
name = "advent-2024-03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Krystian Krakowski", email = "kkrakowski22@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
advent-2024-02 = "advent_2024_03:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
