[project]
name = "advent-2025-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Krystian Krakowski", email = "kkrakowski22@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
advent-2025-01 = "advent_2025_01:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"