[project]
name = "daytest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Krystian Krakowski", email = "kkrakowski22@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
daytest = "daytest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
